# agent-familiars

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pet_polish.yml  pet_request.yml
.github/workflows/: validate.yml
catalog/: brand-safe-reference-lines.json  first-50-motion.json  flagship-10.json  packs.json  pet-profiles.json  pets.json  product-trope-pets.json  sequence-presets.json  sequence-themes.json
docs/: ANIMATION_BIBLE.md  AUTOMATED_PET_ROUTINES.md  BRAND_SAFE_REFERENCE_LINES.md  CHOOSING_A_FAMILIAR.md  CLI.md  CLI_MCP_ROADMAP.md  CREATE_A_PET.md  CREATE_A_REEL.md  CREATE_A_SEQUENCE.md  ECOSYSTEM_TOOLS.md  FIRST_50.md  INSTALL.md  LICENSING.md  MAINTAINER_WORKFLOW.md  MCP.md  PET_CREATION_PLAYBOOK.md  PRODUCTION_STATUS.md  PRODUCT_TROPE_PETS.md  RELEASE.md  RESEARCH.md  STATE_INSTRUMENTS.md  TOP_10_QA.md  git-worktree-isolated-branching.md
examples/sequences/: no-knight-spotlight.json  state-instruments-comparison.json  (+1 more)
familiars/: __init__.py  cli.py  limits.py  mcp_server.py  pet_assets.py  sequence_presets.py  sequence_renderer.py  sequence_schema.py
licenses/: gennadi-kuzmin-awesome-codex-pets-MIT.txt  mertcreates-codex-paws-CC-BY-4.0.md
scripts/: check_release_readiness.py  generate_signal_surface.py  generate_state_instruments.py  install_pet.py  render_brand_assets.py  render_previews.py  render_readme_cards.py  render_reel.py  render_sequence.py  rotate_installed_pet_variant.py  smoke_mcp_client.py  validate_design_specs.py  validate_docs.py  validate_pets.py
(+135 files in other folders)
